feat: - Currency methods updated base on key - Contracts dir created
